<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/registerButton"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/green_btn_bg"
        android:fontFamily="@font/open_sans"
        android:text="@string/registration"
        android:textColor="#E2CF8E"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/open_sans"
        android:text="@string/account_exist"
        android:textColor="@color/green"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="550dp"
        android:autoSizeTextType="uniform"
        android:text="@string/type_info"
        android:textAppearance="@style/textBoxStyle"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="276dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="7dp"
            android:layout_weight="1"
            android:background="@drawable/inputbox_bg"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingStart="30dp"
            android:textAlignment="textStart"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="7dp"
            android:layout_weight="1"
            android:background="@drawable/inputbox_bg"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/login_or_email"
            android:inputType="textEmailAddress"
            android:paddingStart="30dp"
            android:textAlignment="textStart"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="7dp"
            android:layout_weight="1"
            android:background="@drawable/inputbox_bg"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="30dp"
            android:textAlignment="textStart"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="7dp"
            android:layout_weight="1"
            android:background="@drawable/inputbox_bg"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:paddingStart="30dp"
            android:textAlignment="textStart"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="120dp"
        android:layout_height="71dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="262dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:srcCompat="@drawable/iozhh" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="10dp"
        android:text="@string/registration_apply"
        android:textAlignment="textEnd"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>