<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/inputbox_bg"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="30dp"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="400dp"
        android:autoSizeTextType="uniform"
        android:text="@string/input_login"
        android:textAppearance="@style/textBoxStyle"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/inputbox_bg"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/login_or_email"
        android:inputType="textEmailAddress"
        android:paddingStart="30dp"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="235dp"
        android:layout_height="170dp"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:srcCompat="@drawable/strangebirdhmmm" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="15dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/open_sans"
        android:text="@string/forgot_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="484dp"
        android:layout_marginBottom="250dp"
        android:text="@string/big_OR"
        android:textAlignment="center"
        android:textAppearance="@style/textBoxStyle"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="238dp"
        android:layout_height="41dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/socials" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="51dp"
        android:background="@drawable/green_btn_bg"
        android:fontFamily="@font/open_sans"
        android:text="@string/login"
        android:textColor="#E2CF8E"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:fontFamily="@font/open_sans"
        android:text="@string/no_account"
        android:textColor="@color/green"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>