<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="73dp"
        android:layout_height="157dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/startpage_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="98dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/open_sans"
        android:text="@string/title1part"
        android:textAlignment="textStart"
        android:textColor="#13614C"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/title2part"
        android:textColor="#13614C"
        android:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="274dp"
        android:layout_height="59dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/yellow_btn_bg"
        android:fontFamily="@font/open_sans"
        android:text="@string/login"
        android:textColor="#13614C"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="@+id/registerButton" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="274dp"
        android:layout_height="59dp"
        android:layout_marginTop="687dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/green_btn_bg"
        android:fontFamily="@font/open_sans"
        android:text="@string/registration"
        android:textColor="#E2CF8E"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="216dp"
        android:layout_height="184dp"
        android:layout_marginBottom="37dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:srcCompat="@drawable/fatbirdhahaha" />

</androidx.constraintlayout.widget.ConstraintLayout>